# OpenFace

./: CMakeLists.txt
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/LandmarkDetector/include/: LandmarkDetectorFunc.h
lib/local/LandmarkDetector/model/: clm_general(old full).txt  clm_general.txt
lib/local/LandmarkDetector/src/: LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp
